# slambook2

ch3/: CMakeLists.txt
ch3/examples/: CMakeLists.txt  plotTrajectory.cpp
ch3/useEigen/: CMakeLists.txt  eigenMatrix.cpp
ch3/useGeometry/: CMakeLists.txt  eigenGeometry.cpp
ch4/: CMakeLists.txt
ch4/example/: trajectoryError.cpp
ch6/: gaussNewton.cpp
