include_directories("/usr/include/eigen3")
add_executable(coordinateTransform coordinateTransform.cpp)
add_definitions(-DPath ${CMAKE_CURRENT_SOURCE_DIR})
find_package(Pangolin REQUIRED)
include_directories(${Pangolin_INCLUDE_DIRS})
add_executable(plotTrajectory plotTrajectory.cpp)
target_link_libraries(plotTrajectory ${Pangolin_LIBRARIES})
